--- a/style.css
+++ b/style.css
@@ -44,4 +44,53 @@
     100% { transform: translateY(0); }
   }
 
+
+
+   /* CSS for pop up  */
+   .popup-overlay {
+      
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 1;
+    display: flex;
+    display: none;
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .popup-content {
+    background-color: #fff;
+    padding: 8%;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
+    text-align: center;
+  }
+
+  .popup-content button {
+    padding: 10px 20px;
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    margin: 5px;
+    font-size: 18px;
+  }
+
+  .popup-content button:hover {
+    background-color: #2980b9;
+  }
+
+  .popup-content button.no {
+    background-color: #e74c3c;
+  }
+
+  .popup-content button.no:hover {
+    background-color: #c0392b;
+  }
+
   
