--- a/style_match_pair.css
+++ b/style_match_pair.css
@@ -7,7 +7,9 @@ body {
 }
 
 .game-container {
-  margin: 0 auto;
+  margin: auto;
+  margin-top: 7%;
+
   max-width: 1400px;
   padding: 20px;
   background: linear-gradient(180deg, #fff, #e0e0e0);
@@ -111,4 +113,39 @@ transform: rotateY(180deg);
 display: flex;
 align-items: center;
 justify-content: center;
+}
+ /* CSS for the close button */
+ .close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px; /* Larger close button */
+  cursor: pointer;
+  color: #888; /* Gray color */
+}
+
+.close-button:hover {
+  color: #000; /* Darken on hover */
+}
+
+
+
+button:hover {
+  background-color: #45a049;
+}
+.sound-control-button {
+  position: absolute;
+top: 10px;
+right: 10px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 24px;
+  color: #555;
+  transition: color 0.3s;
+}
+
+.sound-control-button:hover {
+  color: #333;
 }
