--- a/style_match_pair.css
+++ b/style_match_pair.css
@@ -12,10 +12,13 @@ body {
 
   max-width: 1400px;
   padding: 20px;
-  background: linear-gradient(180deg, #fff, #e0e0e0);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.5), rgba(224, 224, 224, 0.5));
+
+
   border: 2px solid #3a3a3a;
   border-radius: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  
 }
 
 .game-container h1 {
@@ -29,6 +32,7 @@ body {
   display: flex;
   justify-content: space-between;
   margin: 20px 0;
+  
 }
 
 .game-info span {
@@ -42,6 +46,7 @@ body {
   gap: 20px;
   justify-content: center;
   margin: 20px 0;
+  
 }
 
 .card {
@@ -148,4 +153,17 @@ right: 10px;
 
 .sound-control-button:hover {
   color: #333;
+}
+#time {
+  font-size: 1.5em;
+  color: #333;
+  font-weight: bold;
+  margin-right: 20px;
+}
+
+/* CSS for the enhanced score display */
+#score {
+  font-size: 1.5em;
+  color: #333;
+  font-weight: bold;
 }
